--- a/logicle/package.json
+++ b/logicle/package.json
@@ -87,6 +87,7 @@
     "kysely": "^0.27.4",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.487.0",
+    "mermaid": "^11.6.0",
     "micromatch": "^4.0.5",
     "moment": "2.29.4",
     "nanoid": "^5.0.4",
@@ -115,6 +116,8 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
+    "remark-mdx": "^3.1.0",
+    "remark-mermaid-plugin": "^1.0.2",
     "sharp": "^0.32.6",
     "swr": "2.3.3",
     "tailwind-merge": "^2.2.1",
