--- a/logicle/package.json
+++ b/logicle/package.json
@@ -120,6 +120,7 @@
     "remark-math": "^6.0.0",
     "remark-mdx": "^3.1.0",
     "remark-mermaid-plugin": "^1.0.2",
+    "saml2-js": "^4.0.3",
     "sharp": "^0.32.6",
     "swr": "2.3.3",
     "tailwind-merge": "^2.2.1",
