--- a/logicle/.env
+++ b/logicle/.env
@@ -1,7 +1,8 @@
+APP_URL=http://localhost:3000
 PORT=3000
 NEXTAUTH_URL=http://localhost:3000/api/auth
-APP_URL=http://localhost:3000
 NEXTAUTH_SECRET=rZTFtfNuSMajLnfFrWT2PZ3lX8WZv7W/Xs2H8hkEY6g=
+APP_DISPLAY_NAME=Logicle
 DB_ENGINE=sqlite
 DATABASE_URL=file:///data/sqlite/logicle.sqlite
 FILE_STORAGE_LOCATION=/data/files
