--- a/logicle/.env
+++ b/logicle/.env
@@ -15,6 +15,8 @@ ENABLE_WORKSPACES=1
 ENABLE_CHAT_ATTACHMENTS=1
 ENABLE_SIGNUP=1
 ENABLE_CHAT_AUTOSUMMARY=1
+# Add a button to tool invocation notification to show tool call result in sidebar
+ENABLE_SHOW_TOOL_RESULT=1
 # Use the chat backend/model for autosummary. If set to 0, a reasonable backend/model is found and used
 CHAT_AUTOSUMMARY_USE_CHAT_BACKEND=0
 CHAT_ATTACHMENTS_ALLOWED_FORMATS=image/jpeg,image/png,image/webp,image/gif
