Enable openai response summaries (only when response APIs are enabled)

--- a/logicle/.env
+++ b/logicle/.env
@@ -25,5 +25,10 @@ ENABLE_LOGICLE_CLOUD_IMAGE_PROXY=0
 FILE_STORAGE_ENCRYPTION_KEY=CHANGEIT
 OPENAPI_TOOL_REQUIRE_CONFIRM=0
 OPENAPI_FETCH_TIMEOUT_SECS=3600
+# Response APIs support native tools and reasoning summaries. 
+# But... tool validation is stricter
+# To avoid breaking, we leave the default to completion APIs
+# Note that response APIs are used anyway when native tools like web search are enabled
+OPENAI_USE_RESPONSE_APIS=0
 # Limit the number of conversations returned by conversion list API
 # MAX_CONVERSATION_RESULTS=1000
