--- a/logicle/package.json
+++ b/logicle/package.json
@@ -20,13 +20,12 @@
     "build-ci": "next build"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/google-vertex": "^2.2.1",
-    "@ai-sdk/openai": "^1.3.22",
-    "@ai-sdk/openai-compatible": "^0.2.0",
-    "@ai-sdk/perplexity": "^1.1.0",
-    "@ai-sdk/provider": "^1.1.0",
-    "@ai-sdk/provider-utils": "^2.2.0",
+    "@ai-sdk/anthropic": "2.0.0-alpha.13",
+    "@ai-sdk/google-vertex": "3.0.0-alpha.13",
+    "@ai-sdk/openai": "2.0.0-alpha.13",
+    "@ai-sdk/perplexity": "2.0.0-alpha.13",
+    "@ai-sdk/provider": "2.0.0-alpha.13",
+    "@ai-sdk/provider-utils": "3.0.0-alpha.13",
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
     "@aws-sdk/client-s3": "^3.758.0",
@@ -63,7 +62,7 @@
     "@tailwindcss/typography": "0.5.9",
     "@tanstack/react-table": "^8.21.2",
     "@uiw/react-codemirror": "^4.23.6",
-    "ai": "^4.3.16",
+    "ai": "5.0.0-alpha.13",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
     "autoprefixer": "^10.4.16",
@@ -130,7 +129,7 @@
     "uuid": "9.0.0",
     "winston": "^3.15.0",
     "yaml": "^2.6.0",
-    "zod": "^3.22.4"
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@tailwindcss/forms": "0.5.6",
