--- a/logicle/package.json
+++ b/logicle/package.json
@@ -115,11 +115,13 @@
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
+    "remark": "^15.0.1",
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
     "remark-mdx": "^3.1.0",
     "remark-mermaid-plugin": "^1.0.2",
     "sharp": "^0.32.6",
+    "strip-markdown": "^6.0.0",
     "swr": "2.3.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
