--- a/logicle/package.json
+++ b/logicle/package.json
@@ -57,6 +57,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@readme/openapi-parser": "^2.6.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/typography": "0.5.9",
