--- a/logicle/package.json
+++ b/logicle/package.json
@@ -90,6 +90,7 @@
     "lucide-react": "^0.487.0",
     "mermaid": "^11.6.0",
     "micromatch": "^4.0.5",
+    "mime-types": "^3.0.1",
     "moment": "2.29.4",
     "nanoid": "^5.0.4",
     "next": "^15.3.2",
@@ -144,6 +145,7 @@
     "@types/i18next": "^12.1.0",
     "@types/jest": "29.5.4",
     "@types/mdast": "^4.0.4",
+    "@types/mime-types": "^3.0.1",
     "@types/mocha": "10.0.1",
     "@types/node": "^20.6.3",
     "@types/nodemailer": "6.4.9",
